Fixes #1316 and fixes #1124